# notification_bot_auth_server

./: .env.default  .gitignore  alembic.ini  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml
db/: init.sql
db/alembic/: env.py
db/alembic/versions/: 1f182389e178_add_user_model.py
scripts/: dev.sh
src/: main.py
src/models/: base.py  session.py  user.py
src/routes/users/: __init__.py  controllers.py  router.py
src/routes/users/dto/: add_user_dto.py  update_user_dto.py  user_dto.py  users_dto.py
src/settings/base/: __init__.py  base.py
