[tool.poetry]
name = "auth-server"
version = "0.1.0"
description = ""
authors = ["Denis Romodanov <darvenommm@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
aio-pika = "^9.4.3"
uvloop = "^0.20.0"
orjson = "^3.10.7"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
alembic = "^1.13.3"
msgpack = "^1.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
psycopg = {extras = ["binary"], version = "^3.2.3"}


[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^24.8.0"
flake8 = "^7.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.8.19"
flake8-coding = "^1.3.2"
flake8-comprehensions = "^3.15.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.5.0"
flake8-executable = "^2.1.3"
flake8-isort = "^6.1.1"
flake8-logging = "^1.6.0"
flake8-pie = "^0.16.0"
flake8-pytest-style = "^2.0.0"
flake8-simplify = "^0.21.0"
isort = "^5.13.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
^/(
  (
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | venv
  )/
)
'''

[tool.isort]
line_length = 100
order_by_type = true
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = false
exclude = ["^conf/", "^tests/", "^utils/"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "prometheus_client.*",
    "starlette_prometheus.*",
    "uvicorn.*",
]
ignore_missing_imports = true
